@@ -391,7 +391,12 @@ def find_MODULES(Makefile, flags):
             ))
             paths.sort(key=lambda s: len(s))
             if paths:
-                Makefile['MODULES'] = '$(libdir)' + paths[0][len(libdir):]
+                # NOTICE:  Just notice this rather ugly construction.
+                # You can't just change the data.
+                if paths[0].beginswith(libdir)
+                    Makefile['MODULES'] = '$(libdir)' + paths[0][len(libdir):]
+                else:
+                    Makefile['MODULES'] = '$(prefix)' + paths[0][len(prefix):]
                 return False
     
     # Mac OS X
