@@ -1,5 +1,7 @@
     0.4.12
         * check.sh: enginecfg.default -> enginecfg.fallback
+        * configure.py (find_MODULES): Bugfix:
+            "/usr/local/liby-5.4/site-packages"
 
 2016-12-23      Oskar Skog      <oskar.skog.finland@gmail.com>
     0.4.11
